# yt2audio

./: .gitignore  Makefile  README.md  menubar_app.py  pyproject.toml  youtube-audio-upload.bat  youtube-download.py  youtube_download.py
youtube-audio-upload/: __main__.py  audio_download.py  menubar_client.py
yt2audio/: __main__.py  core.py  headers_auth.json
