[tool.poetry]
name = "youtube-audio-upload"
version = "0.1.0"
description = ""
authors = ["ARUOHTA <otaru1214@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_audio_upload"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"
yt-dlp = "^2023.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
