[tool.poetry]
name = "yt2audio"
version = "0.1.0"
description = ""
authors = ["ARUOHTA <otaru1214@gmail.com>"]
readme = "README.md"
packages = [{include = "yt2audio"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
yt-dlp = "^2023.3.4"
rumps = "^0.4.0"
pydub = "^0.25.1"
mutagen = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
